--- a/frontend/src/styles/Signup.css
+++ b/frontend/src/styles/Signup.css
@@ -5,9 +5,10 @@
   width: 100%;
   height: 100vh;
   background-color: grey;
+  align-items: center;
 }
-form {
-  width: 300px;
+.loginform {
+  width: 500px;
   /* margin: 200px; */
   margin-left: 400px;
   display: flex;
@@ -44,4 +45,10 @@ h1 {
 label {
   margin-left: -100px;
   text-align: left;
+}
+@media only screen and (max-width: 900px) {
+  .loginform,
+  h1 {
+    margin-left: 0;
+  }
 }
